--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "markdown-it-example",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "author": "hikaru",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
