--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "markdown-it": "^13.0.1"
+  },
   "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
     "typescript": "^4.5.4",
     "vite": "^2.9.7"
   }
